--- a/symfony-project/templates/default/index.html.twig
+++ b/symfony-project/templates/default/index.html.twig
@@ -8,10 +8,12 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
     <div class="example-wrapper">
-        This is a test
+        Login
     </div>
-    <form action="*" method="POST" id="entity">
-        <input type="text" value="This is the value" name="manage" />
-        <input type="submit" class="button" value="Submit" />
-    </form>
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
+    {{ form_end(form) }}
+    {% for message in app.flashes('error') %}
+    {{ message }}
+    {% endfor %}
 {% endblock %}
