--- a/symfony-project/templates/default/index.html.twig
+++ b/symfony-project/templates/default/index.html.twig
@@ -3,17 +3,36 @@
 {% block title %}Liste des projets{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-    <div class="example-wrapper">
-        Login
-    </div>
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    {{ form_end(form) }}
-    {% for message in app.flashes('error') %}
-    {{ message }}
+<div class="example-wrapper">
+<h1>Liste des projets en cours</h1>
+<table>
+    <thead>
+    <tr>
+        <td>Id du projet</td>
+        <td>Nom du projet</td>
+        <td>Date de début</td>
+        <td>Date de fin</td>
+        <td>Manager</td>
+        <td>Type de projet</td>
+        <td>Client</td>
+        <td>Code</td>
+    </tr>
+    </thead>
+    <tbody>
+    {% for projet in ongoingProjectList %}
+        <tr>
+            <td>{{ projet.idProjet }}</td>
+            <td>{{ projet.nomProjet }}</td>
+            <td>{{ projet.dateDebut|date('d/m/Y') }}</td>
+            <td>{{ projet.dateFin|date('d/m/Y') }}</td>
+            <td>{{ projet.manager.nomManager }}</td>
+            <td>{{ projet.typeProjet.nomTypeProjet}}</td>
+            <td>{{ projet.client.raisonSociale }}</td>
+            <td>{{ projet.code }}</td>
+        </tr>
     {% endfor %}
+    </tbody>
+</table>
+<br />
+</div>
 {% endblock %}
